deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mission-deployment
 labels:
  app: web
spec:
 replicas: 3
 selector:
  matchLabels:
   app: web
 template:
   metadata:
    name: mission-pod
    labels:
     app: web
   spec: 
    containers:
     - name: mission-container
       image: mission.devopsproject1.azurecr.io
       ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: mission-svc
spec:
 type: LoadBalancer
 ports:
  - targetPort: 8080
    port: 80
 selector:
  app: web
